--- a/전제정리모음.md
+++ b/전제정리모음.md
@@ -1,2 +1,9 @@
-# 최종팀플전제정리
-## 최종팀플전제정리
+# 전제 정리 모음
+## 공동
+1. 첫 멘토링 후, 규모가 조금 많이 한정되는 문제 -> "작품성이 아닌 제품성에 집중을 했다. 보여지는 기능은 작더라도, 그 기능이 확실한 이점을 가질 수 있도록 설계했다."
+
+## 광욱
+1. 얼굴 인식 및 비교 기능에서 이미 구현되어있는 F_R 모델을 사용한 이유 : 우리는 AI를 활용해서 어떤 기능을 만들고 싶었던 거였기 때문에, 모델 자체를 구현하고 생성하는 과정은 본 프로젝트에 OOO. Ex) 포함시키지 않았다. -> 추가) 얼굴 검출 모델은 어렵지 않았지만, 특징점을 잡고 거리를 계산하는 모델까지 포함한 F_R 모델을 기간 안에 새로 만드는 것은 많이 무리라고 생각을 했다.
+
+## 시연
+1. 얼굴 인식(검출)에서 Haar Cascades를 사용한 이유 : 우리 기능은 정면 얼굴에 대한 영상 처리이고, Haar Cascades가 정면 얼굴 검출에는 인식률이 좋기? 때문에 선택해서 사용하였다.(박시연시연 수정할 것)
