--- a/전제정리모음.md
+++ b/전제정리모음.md
@@ -7,3 +7,6 @@
 
 ## 시연
 1. 얼굴 인식(검출)에서 Haar Cascades를 사용한 이유 : 우리 기능은 정면 얼굴에 대한 영상 처리이고, Haar Cascades가 정면 얼굴 검출에는 인식률이 좋기? 때문에 선택해서 사용하였다.(박시연시연 수정할 것)
+
+## 한길
+1. 15(수) 발표 중, 순서도 설명에서 사용자 관리 페이지에 회원 정보 조회만 있는 이유 -> 보안에 중점을 두는 프로그램이기 때문에, 사용자 입장에서 편리하게 사용할만한 기능을 추가하는 부분은 후순위로 미뤄두었다. 추후에, 보안성 등을 모두 고려하여 추가할 예정이다. 라고 말할 것?
