--- a/전제정리모음.md
+++ b/전제정리모음.md
@@ -1,6 +1,7 @@
 # 전제 정리 모음
 ## 공동
 1. 첫 멘토링 후, 규모가 조금 많이 한정되는 문제 -> "작품성이 아닌 제품성에 집중을 했다. 보여지는 기능은 작더라도, 그 기능이 확실한 이점을 가질 수 있도록 설계했다."
+2. 발표 때, 단순 기능 설명만 하면 "이 긴 시간동안 이 정도밖에 못했어?"라고 생각할 수 있으니, 예시로 "어떤 부분을 새롭게 학습하여 어떤 식으로 활용했고, 최종적으로 어떤 패키지 등을 사용하여 이런 기능을 만들었다." 등의 약간의 스토리텔링이 있는 것이 훨씬 좋다.
 
 ## 광욱
 1. 얼굴 인식 및 비교 기능에서 이미 구현되어있는 F_R 모델을 사용한 이유 : 우리는 AI를 활용해서 어떤 기능을 만들고 싶었던 거였기 때문에, 모델 자체를 구현하고 생성하는 과정은 본 프로젝트에 OOO. Ex) 포함시키지 않았다. -> 추가) 얼굴 검출 모델은 어렵지 않았지만, 특징점을 잡고 거리를 계산하는 모델까지 포함한 F_R 모델을 기간 안에 새로 만드는 것은 많이 무리라고 생각을 했다.
