--- a/전제정리모음.md
+++ b/전제정리모음.md
@@ -15,3 +15,7 @@
 
 ## 한길
 1. 15(수) 발표 중, 순서도 설명에서 사용자 관리 페이지에 회원 정보 조회만 있는 이유 -> 보안에 중점을 두는 프로그램이기 때문에, 사용자 입장에서 편리하게 사용할만한 기능을 추가하는 부분은 후순위로 미뤄두었다. 추후에, 보안성 등을 모두 고려하여 추가할 예정이다. 라고 말할 것?
+
+
+## 은태
+1. 아두이노 or 라즈베리파이 중 라파를 선택한 이유 : 윈폼과 같은 GUI를 구성하여 터치스크린과 같은 디스플레이를 통해 출입 시스템의 과정을 시각적으로 보여주고자 했기 때문이다.
