--- a/전제정리모음.md
+++ b/전제정리모음.md
@@ -15,6 +15,7 @@
 
 ## 한길
 1. 15(수) 발표 중, 순서도 설명에서 사용자 관리 페이지에 회원 정보 조회만 있는 이유 -> 보안에 중점을 두는 프로그램이기 때문에, 사용자 입장에서 편리하게 사용할만한 기능을 추가하는 부분은 후순위로 미뤄두었다. 추후에, 보안성 등을 모두 고려하여 추가할 예정이다. 라고 말할 것?
+2. 사원증 제작페이지에서 신분증을 인식하는 이유는 원래는 개인확인 하기 위한 작업인데 이를 대신해서 하려고 넣었다.
 
 
 ## 은태
