--- a/전제정리모음.md
+++ b/전제정리모음.md
@@ -9,6 +9,7 @@
 ## 광욱
 1. 얼굴 인식 및 비교 기능에서 이미 구현되어있는 F_R 모델을 사용한 이유 : 우리는 AI를 활용해서 어떤 기능을 만들고 싶었던 거였기 때문에, 모델 자체를 구현하고 생성하는 과정은 본 프로젝트에 OOO. Ex) 포함시키지 않았다. -> 추가) 얼굴 검출 모델은 어렵지 않았지만, 특징점을 잡고 거리를 계산하는 모델까지 포함한 F_R 모델을 기간 안에 새로 만드는 것은 많이 무리라고 생각을 했다.
 2. 출입 시스템에서 얼굴을 인식할 때, 종이 및 사원증의 얼굴로도 같은 얼굴로 인식할 가능성 많음 -> 추후 개선사항으로 남겨둘 것.
+3. 채팅 서버(광욱)와 프로그램 서버(한길)를 통신하려고 하는 이유 -> 회사에서도 프로그램적 인트라넷과 다른 메신저? 등을 사용하는 인트라넷은 나뉘어져 있으며, 우리는 프로그램 오류 등이 났을 때, 사용자 및 관리자가 양방 소통하기 위한 채팅 플랫폼이기 때문에 오류가 난 상황에 채팅 서버와 연결을 하는 것이 좋다고 생각함.
 
 ## 시연
 1. 얼굴 인식(검출)에서 Haar Cascades를 사용한 이유 : 우리 기능은 정면 얼굴에 대한 영상 처리이고, Haar Cascades가 정면 얼굴 검출에는 인식률이 좋기? 때문에 선택해서 사용하였다.(박시연시연 수정할 것)
